--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.18",
     "eslint-config-next": "^13.2.4",
+    "eslint-config-react-app": "^7.0.1",
     "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
